add some unit test, modify db schema
