# handler/endpoints.go
@@ -14,14 +14,6 @@ import (
 	"github.com/triardn/panganggo/repository"
 )
 
-// This is just a test endpoint to get you started. Please delete this endpoint.
-// (GET /hello)
-func (s *Server) Hello(ctx echo.Context, params generated.HelloParams) error {
-	var resp generated.HelloResponse
-	resp.Message = fmt.Sprintf("Hello User %d", params.Id)
-	return ctx.JSON(http.StatusOK, resp)
-}
-
 func (s *Server) Registration(ctx echo.Context) error {
 	registerRequest := generated.RegisterRequest{}
 	if err := ctx.Bind(&registerRequest); err != nil {
